tests/fixtures/universal-chart/metrics-block-disabled-values.golden.yaml
---
# Source: universal-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: universal-chart
  labels:
    helm.sh/chart: universal-chart-0.0.0-a.placeholder
    app.kubernetes.io/name: universal-chart
    app.kubernetes.io/instance: universal-chart
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: universal-chart
    app.kubernetes.io/instance: universal-chart
---
# Source: universal-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universal-chart
  labels:
    helm.sh/chart: universal-chart-0.0.0-a.placeholder
    app.kubernetes.io/name: universal-chart
    app.kubernetes.io/instance: universal-chart
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: universal-chart
      app.kubernetes.io/instance: universal-chart
  template:
    metadata:
      labels:
        helm.sh/chart: universal-chart-0.0.0-a.placeholder
        app.kubernetes.io/name: universal-chart
        app.kubernetes.io/instance: universal-chart
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: universal-chart
      containers:
        - name: universal-chart
          image: "ghcr.io/example/app:1.2.3"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: universal-chart
              app.kubernetes.io/name: universal-chart
          maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
---
# Source: universal-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: universal-chart
  labels:
    helm.sh/chart: universal-chart-0.0.0-a.placeholder
    app.kubernetes.io/name: universal-chart
    app.kubernetes.io/instance: universal-chart
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "app.example.com"
      secretName: app-example-com
  rules:
    - host: "app.example.com"
      http:
        paths:
          - path: /(app)(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: universal-chart
                port:
                  number: 3000
